metadata and image

--- a/bare.html
+++ b/bare.html
@@ -6,6 +6,13 @@
   <script src="fuzzyset.js"></script>
   <script src="textimony.js">
   </script>
+<meta property="og:type" content="website" />
+  <meta content="unreliable interrogator" property="og:title" />
+  <meta property="og:url"
+content="http://unreliable.interrogator.us/textimony/bare.html" />
+   <meta property="og:img" content="http://unreliable.interrogator.us/textimony/rel.png"/>
+<link rel="image_src" href="http://unreliable.interrogator.us/textimony/rel.png" / >
+
 </head>
 
 <body>
