--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <script src="fuzzyset.js"></script>
   <script src="textimony.js">
   </script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="style.css">
+  <style>
+  </style>
 </head>
 
 <body>
+  <div id="waiting">Loading...</div>
   <div id="words">
   </div>
   <div id="top">
