--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>operaional character rendition</title>
+  <title>operational character rendition</title>
   <script src="ocrad.js"></script>
   <script src="dlav.js"></script>
   <script src="ocr.js">
