--- a/index.html
+++ b/index.html
@@ -2,40 +2,43 @@
 <html>
 
 <head>
-  <title>operational character rendition</title>
-  <script src="ocrad.js"></script>
-  <script src="dlav.js"></script>
-  <script src="ocr.js">
-  </script>
-  <link rel="stylesheet" href="ocr.css">
+    <title>operational character rendition</title>
+    <script src="ocrad.js"></script>
+    <script src="dlav.js"></script>
+    <script src="lib/levenshtein.js"></script>
+    <script src="ocr.js">
+    </script>
+    <link rel="stylesheet" href="ocr.css">
 </head>
 
 <body>
 
-  <div id="json"></div>
+    <div id="json"></div>
 
-  <div id="container">
-    <div id="top">
-      <div id="read"></div>
-      <h1 id="wat"></h1>
-      <h1 id="txt"></h1>
+    <div id="container">
+        <div id="top">
+            <div id="read">
+                <div id="readword"></div>
+                <div id="readdata"></div>
+            </div>
 
 
-      <div id="chrs">
+            <div id="chrs">
 
-        <canvas id="type" width="100" height="100"></canvas>
-        <div id="text">
+                <canvas id="type" width="100" height="100"></canvas>
+                <div id="text">
+                </div>
+
+            </div>
+
         </div>
 
-      </div>
 
+        <canvas id="full"></canvas>
+        <div id="words">
+        </div>
     </div>
-
-
-    <canvas id="full"></canvas>
-    <div id="words"></div>
-  </div>
-  <img id="page">
+    <img id="page">
 
 
 </body>
