adds metadata, will need tuning for data.json usage

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>operational character rendition</title>
-    <script src="ocrad.js"></script>
-    <script src="dlav.js"></script>
     <script src="lib/levenshtein.js"></script>
+    <script src="dlav.js"></script>
+    <script src="ocrad.js"></script>
     <script src="ocr.js">
     </script>
     <link rel="stylesheet" href="ocr.css">
@@ -39,7 +39,10 @@
     </div>
     <img id="page">
 
-
+    <div id="console">
+        <div id="data"></div>
+        <div id="pages"></div>
+    </div>
 </body>
 
 </html>
