lots of fixes, multipage, timing tweaks, continuity

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="lib/levenshtein.js"></script>
     <script src="ocrad.js"></script>
     <script src="ocr.js">
+
+
     </script>
     <link rel="stylesheet" href="ocr.css">
 </head>
@@ -17,7 +19,11 @@
         <div id="top">
             <div id="read">
                 <div id="readword"></div>
-                <div id="readdata"></div>
+                <div id="readdata">
+                    <div id="source"></div>
+                    <div id="distance"></div>
+                </div>
+
             </div>
 
 
@@ -36,7 +42,7 @@
         <div id="words">
         </div>
     </div>
-    <img id="page">
+    <img id="page" crossorigin="anonymous">
 
     <div id="console">
         <div id="data"></div>
