lots of changes, working tesseract support, needs testing, needs switching, and needs to fix bad filename support

--- a/tess.html
+++ b/tess.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>operational character rendition</title>
+    <script src="lib/tesseract/tesseract.min.js"></script>
     <script src="lib/levenshtein.js"></script>
-    <script src="ocrad.js"></script>
-    <script src="ocr.js">
+
+    <script src="tess.js">
 
 
     </script>
-    <link rel="stylesheet" href="ocr.css">
+    <link rel="stylesheet" href="tess.css">
 </head>
 
 <body>
