fix poor image handling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <!-- need some logic here to pick between tesseract and OCRAD, tess/ocr-ad.js, css stays the same.-->
     <script type="module" src="./lib/textfit-web-component/textfit.js"></script>
-
+    <link rel="shortcut icon" href="OS.png"> 
 </head>
 
 
