--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     </div>
     <img id="page" crossorigin="anonymous">
 
-    <text-fit id="console" max-font-size="120" max-height="100vh" log-overflow-error="true">
-        <div id="data"></div>
+    <div id="console" max-font-size="120" max-height="100vh" log-overflow-error="true">
+        <div id="meta"></div>
         <div id="pages"></div>
-    </text-fit>
+    </div>
 </body>
 <script>
 
