--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
     </div>
 </body>
 <script>
-
     let tess = ["lib/tesseract/tesseract.min.js", "lib/levenshtein.js", "joined.js", "justtess.js", "tess.css"];
     let ocrad = ["ocrad.js", "lib/levenshtein.js", "joined.js", "justocrad.js", "ocrad.css", "tess.css"];
     var themode, theversion;
@@ -55,10 +54,10 @@
     let rando = rand(0, 1);
 
     let mode = url.searchParams.get('mode');
-    if (mode == "tesseract") {
+    if (mode == "tesseract_2.2.1" || mode == "tesseract") {
         rando = 0;
 
-    } else if (mode == "ocrad") {
+    } else if (mode == "ocrad_0.25" || mode == "ocrad") {
         rando = 1;
     }
 
