fix pagination and mode

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <!-- need some logic here to pick between tesseract and OCRAD, tess/ocr-ad.js, css stays the same.-->
     <script type="module" src="./lib/textfit-web-component/textfit.js"></script>
-    <link rel="shortcut icon" href="OS.png"> 
+    <script src="joined.js"></script>
+    <link rel="shortcut icon" href="OS.png">
 </head>
 
 
@@ -47,65 +48,74 @@
     </div>
 </body>
 <script>
-    let tess = ["lib/tesseract/tesseract.min.js", "lib/levenshtein.js", "joined.js", "justtess.js", "tess.css"];
-    let ocrad = ["ocrad.js", "lib/levenshtein.js", "joined.js", "justocrad.js", "ocrad.css", "tess.css"];
-    var themode, theversion;
-    let url = new URL(window.location.href);
-    let rando = rand(0, 1);
+    let themode, theversion;
+    let pickMode = async function (mode) {
 
-    let mode = url.searchParams.get('mode');
-    if (mode == "tesseract_2.2.1" || mode == "tesseract") {
-        rando = 0;
+        let tess = ["lib/tesseract/tesseract.min.js", "lib/levenshtein.js", "justtess.js", "tess.css"];
+        let ocrad = ["ocrad.js", "lib/levenshtein.js", "justocrad.js", "ocrad.css", "tess.css"];
+        let rando;
+        if (!mode) {
+            let url = new URL(window.location.href);
+            let rando = rand(0, 1);
 
-    } else if (mode == "ocrad_0.25" || mode == "ocrad") {
-        rando = 1;
-    }
+            mode = url.searchParams.get('mode');
+        }
+        console.log(mode);
+        if (mode == "tesseract_2.2.1" || mode == "tesseract") {
+            rando = 0;
 
-    if (rando == 0) {
-        mode = tess;
-        themode = "tesseract";
-        theversion = "2.2.1";
-    } else {
-        mode = ocrad;
-        themode = "ocrad";
-        theversion = "0.25";
+        } else if (mode == "ocrad_0.25" || mode == "ocrad") {
+            rando = 1;
+        }
 
-    }
+        if (rando == 0) {
+            mode = tess;
+            themode = "tesseract";
+            theversion = "2.2.1";
+        } else {
+            mode = ocrad;
+            themode = "ocrad";
+            theversion = "0.25";
 
-    console.log(mode);
-    loadScripts(mode);
+        }
 
+        console.log(mode);
+        await loadScripts(mode);
 
-    function rand(min, max) {
-        return Math.floor(Math.random() * (max - min + 1)) + min
-    }
+        let mod = `${themode}_${theversion}`
 
-    async function syncAdd(ele) {
-        return new Promise((resolve, reject) => {
-            console.log("waiting...");
-            document.head.appendChild(ele);
-            ele.addEventListener("load", function () {
-                console.log("...done");
-                resolve();
-            }, true);
+        function rand(min, max) {
+            return Math.floor(Math.random() * (max - min + 1)) + min
+        }
 
-        });
-    }
+        async function syncAdd(ele) {
+            return new Promise((resolve, reject) => {
+                console.log("waiting...");
+                document.head.appendChild(ele);
+                ele.addEventListener("load", function () {
+                    console.log("...done");
+                    resolve();
+                }, true);
 
-    async function loadScripts(mode) {
-        for (let m of mode) {
-            if (m.includes("css")) {
-                let lin = document.createElement("link");
-                lin.href = m;
-                lin.rel = "stylesheet";
-                await syncAdd(lin);
-            } else {
-                let scr = document.createElement("script");
-                scr.src = m;
-                scr.setAttribute("defer", false);
-                await syncAdd(scr);
+            });
+        }
+
+        async function loadScripts(mode) {
+            for (let m of mode) {
+                if (m.includes("css")) {
+                    let lin = document.createElement("link");
+                    lin.href = m;
+                    lin.rel = "stylesheet";
+                    await syncAdd(lin);
+                } else {
+                    let scr = document.createElement("script");
+                    scr.src = m;
+                    scr.setAttribute("defer", false);
+                    await syncAdd(scr);
+                }
             }
         }
+        return Promise.resolve(mod);
     }
 </script>
 
